# solana-vault

./: Cargo.toml  README.MD
scripts/: deposit_and_withdraw.ts
src/: lib.rs
tests/: vault_tests.rs
