cargo-features = ["edition2024"]

[package]
name = "solana-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.2.1"
borsh = "1.5.6"
borsh-derive = "1.5.6"

[dev-dependencies]
solana-program-test = "2.2.3"
solana-sdk = "2.2.1"
tokio = "1.44.1"

[lib]
crate-type = ["cdylib", "lib"]